--- a/StudentManagementSystem/appsettings.json
+++ b/StudentManagementSystem/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP\\MSSQLSERVER01;Database=StudentManagementDatabase;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
-  }
+  "AllowedHosts": "*"
 }
