--- a/StudentManagementSystem/appsettings.json
+++ b/StudentManagementSystem/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP\\MSSQLSERVER01;Database=StudentManagementDatabase;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-F2A11MM\\SQLEXPRESS;Database=StudentManagementDatabase;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   }
 }
