Added custom exceptions

--- a/StudentManagementSystem/appsettings.json
+++ b/StudentManagementSystem/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-M9BNTKJ;Database=StudentManagementDatabase;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=ROBERT;Initial Catalog=Proiect;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=True"
   }
 }
